--- a/style.css
+++ b/style.css
@@ -1,29 +1,60 @@
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
 body {
-  height: 100vh;
+  /* height: 100vh; */
   background-color: white;
 }
-#div1 {
-  padding: 5px;
-  margin: 10px;
-  height: 40%;
+/* header {
+  position: relative;
+  height: 35vh;
+  border-bottom: 7px solid #eee;
+} */
+#header {
+  /* padding: 5vh;
+  margin: 1vh; */
+  position: relative;
+  font-size: 2rem;
+  height: 35vh;
   background-color: blue;
+  border-bottom: 7px solid #eee;
 }
-#div2 {
-  padding: 5px;
-  margin: 10px;
-  height: 50%;
+#main {
+  height: 65vh;
   background-color: blue;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
-h1,
-h2 {
-  padding: 5px;
-  color: white;
-  text-align: center;
-}
-#num,
+/* #div2 {
+  padding: 5vh;
+  margin: 1vh;
+  height: 50vh;
+  background-color: blue;
+} */
+/* #num,
 #check,
 #reset {
   display: block;
   text-align: center;
   margin: auto;
+} */
+.left {
+  width: 32rem;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.right {
+  width: 32rem;
+  font-size: 2rem;
+  align-items: center;
+}
+p {
+  padding: 5px;
+  color: white;
+  text-align: center;
 }
