--- a/style.css
+++ b/style.css
@@ -6,14 +6,7 @@ body {
   /* height: 100vh; */
   background-color: white;
 }
-/* header {
-  position: relative;
-  height: 35vh;
-  border-bottom: 7px solid #eee;
-} */
 #header {
-  /* padding: 5vh;
-  margin: 1vh; */
   position: relative;
   font-size: 2rem;
   height: 35vh;
@@ -27,19 +20,10 @@ body {
   align-items: center;
   justify-content: space-around;
 }
-/* #div2 {
-  padding: 5vh;
+button {
+  /* padding: 5vh; */
   margin: 1vh;
-  height: 50vh;
-  background-color: blue;
-} */
-/* #num,
-#check,
-#reset {
-  display: block;
-  text-align: center;
-  margin: auto;
-} */
+}
 .left {
   width: 32rem;
   font-size: 2rem;
@@ -47,7 +31,6 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
 .right {
   width: 32rem;
   font-size: 2rem;
